--- a/X5WebDemo/src/main/res/layout/activity_detail_edit.xml
+++ b/X5WebDemo/src/main/res/layout/activity_detail_edit.xml
@@ -134,6 +134,7 @@
 					android:layout_height="1dp"
 					android:background="#ececec"/>
 			<LinearLayout
+					android:id="@+id/ll_edit_scale"
 					android:minHeight="80dp"
 					android:orientation="horizontal"
 					android:layout_width="match_parent"
@@ -212,11 +213,14 @@
 					android:layout_height="1dp"
 					android:background="#ececec"/>
 			<LinearLayout
+					android:id="@+id/ll_edit_sku"
+					android:visibility="visible"
 					android:minHeight="80dp"
 					android:orientation="horizontal"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content">
 				<TextView
+						android:id="@+id/tv_edit_sku"
 						android:gravity="center_horizontal"
 						android:text="商品规格图"
 						android:layout_weight="1"
@@ -229,6 +233,31 @@
 						android:background="@drawable/et_share_title_bg"
 						android:layout_weight="3"
 						android:layout_width="0dp"
+						android:layout_height="wrap_content"/>
+			</LinearLayout>
+			<LinearLayout
+					android:id="@+id/ll_1688_edit_sku"
+					android:visibility="gone"
+					android:minHeight="80dp"
+					android:orientation="horizontal"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content">
+				<TextView
+						android:gravity="center"
+						android:text="商品规格"
+						android:layout_width="match_parent"
+						android:layout_height="30dp"/>
+				<View
+						android:layout_marginTop="3dp"
+						android:layout_marginBottom="3dp"
+						android:layout_width="match_parent"
+						android:layout_height="1dp"
+						android:background="#ececec"/>
+				<android.support.v7.widget.RecyclerView
+						android:gravity="center_vertical"
+						android:id="@+id/rv_detail_1688_edit_sku"
+						android:background="@drawable/et_share_title_bg"
+						android:layout_width="match_parent"
 						android:layout_height="wrap_content"/>
 			</LinearLayout>
 			<View
