--- a/X5WebDemo/src/main/res/layout/activity_img_select.xml
+++ b/X5WebDemo/src/main/res/layout/activity_img_select.xml
@@ -19,6 +19,15 @@
 				android:gravity="center"
 				android:text="取消"/>
 		<TextView
+				android:id="@+id/tv_img_select_clear"
+				android:layout_width="0dp"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:background="#3aafa3"
+				android:gravity="center"
+				android:text="清除所选"
+				android:textColor="#ffffff"/>
+		<TextView
 				android:id="@+id/tv_img_select_complete"
 				android:layout_width="0dp"
 				android:layout_height="match_parent"
